booking-service/k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-service-svc
  labels:
    app: booking-service
spec:
  selector:
    app: booking-service
  ports:
    - port: 80
      targetPort: 8080
      name: http
  type: ClusterIP
